cmake_minimum_required(VERSION 3.13)
project(PRINTF C)

set(CMAKE_C_STANDARD 99)

AUX_SOURCE_DIRECTORY(Libft LIBA)

add_executable(PRINTF ${LIBA} main.c
        ft_printf.c
        ft_atoi.c
        ft_bzero.c
        ft_cntwrd.c
        ft_isalnum.c
        ft_isalpha.c
        ft_isascii.c
        ft_isdigit.c
        ft_isprint.c
        ft_isspace.c
        ft_itoa_base.c
        ft_itoa.c
        ft_lstadd.c
        ft_lstaddr.c
        ft_lstdel.c
        ft_lstdelone.c
        ft_lstiter.c
        ft_lstmap.c
        ft_lstnew.c
        ft_memalloc.c
        ft_memccpy.c
        ft_memchr.c
        ft_memcmp.c
        ft_memcpy.c
        ft_memdel.c
        ft_memmove.c
        ft_memset.c
        ft_numlen.c
        ft_pow.c
        ft_putchar_fd.c
        ft_putchar.c
        ft_putendl_fd.c
        ft_putendl.c
        ft_putnbr_fd.c
        ft_putnbr.c
        ft_putstr_fd.c
        ft_putstr.c
        ft_sqrt.c
        ft_srtwrd.c
        ft_strcat.c
        ft_strchr.c
        ft_strclr.c
        ft_strcmp.c
        ft_strcpy.c
        ft_strdel.c
        ft_strdup.c
        ft_strequ.c
        ft_striter.c
        ft_striteri.c
        ft_strjoin.c
        ft_strlcat.c
        ft_strlen.c
        ft_strlowcase.c
        ft_strmap.c
        ft_strmapi.c
        ft_strncat.c
        ft_strncmp.c
        ft_strncpy.c
        ft_strnequ.c
        ft_strnew.c
        ft_strnstr.c
        ft_strrchr.c
        ft_strsplit.c
        ft_strstr.c
        ft_strsub.c
        ft_strtrim.c
        ft_strupcase.c
        ft_tolower.c
        ft_toupper.c
        get_next_line.c
        libftprintf.h ft_strjoinl.c ft_uitoa_base.c printf_float_double.c printf_pointer.c printf_str.c ft_ftoa.c ft_numinstr.c printf_specificator.c printf_oux.c printf_int.c ft_check_sign_double.c printf_specificator2.c)

link_libraries(./libft/libft.a)